--- a/src/components/PreviewNFT/PreviewNFT.css
+++ b/src/components/PreviewNFT/PreviewNFT.css
@@ -17,13 +17,14 @@
 .header__img {
     inline-size: 100%;
     pointer-events: none;
+    border-radius: 0.375rem;
 }
 .card header::after {
     content: url('../../images/icon-view.svg');
     position: absolute;
+    display: none;
     inline-size: 100%;
     block-size: 100%;
-    display: none;
     justify-content: center;
     align-items: center;
     top: 0;
@@ -34,10 +35,10 @@
 .card header::before {
     content: '';
     position: absolute;
+    display: none;
     inline-size: 100%;
     block-size: 100%;
     background-color: var(--Cyan-modal);
-    display: none;
 }
 .card header:hover::before {
     display: block;
